--- a/style.css
+++ b/style.css
@@ -518,19 +518,18 @@ body {
         }  
         
         .logo {
-            margin-left: 110px;
+            margin-left: 90px;
             display: flex;
             align-items: center;
 
         }
 
         .underline{
-            margin: 10px 0px 0px 35px;
+            margin-top: 10px;
+            margin-left: 7px;
             width: 300px;
             border:1px solid rgb(235, 231, 231);
         }
-
-        
 
         .btn-side{
             
@@ -538,7 +537,7 @@ body {
             flex-direction: row;
             align-items: center;
             padding-top: 10px;
-            margin-left: 34px;
+            margin-left: 5px;
             gap: 6px;
         }
       
